<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/skyblue">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/gamebt1"
            android:text="@string/another_picture"
            android:textSize="25sp"
            android:backgroundTint="@color/steelblue"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/gamebt2"
            android:text="@string/retention_testing"
            android:textSize="25sp"
            android:backgroundTint="@color/steelblue"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/gamebt3"
            android:text="@string/another_number"
            android:textSize="25sp"
            android:backgroundTint="@color/steelblue"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/gamebt4"
            android:text="@string/another_face"
            android:textSize="25sp"
            android:backgroundTint="@color/steelblue"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/gamebt5"
            android:text="@string/picture_puzzle"
            android:textSize="25sp"
            android:backgroundTint="@color/steelblue"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/gamebt6"
            android:text="@string/observation_test"
            android:textSize="25sp"
            android:backgroundTint="@color/steelblue"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/gamebt7"
            android:text="@string/same_picture"
            android:textSize="25sp"
            android:backgroundTint="@color/steelblue"/>

        <Button
            android:id="@+id/healthbt1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/steelblue"
            android:text="@string/calisthenics"
            android:textSize="25sp"/>

        <Button
            android:id="@+id/videobt1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/steelblue"
            android:text="@string/nutrition"
            android:textSize="25sp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/food"
            android:textSize="25sp"
            android:id="@+id/videobt2"
            android:backgroundTint="@color/steelblue"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/feature"
            android:textSize="25sp"
            android:id="@+id/videobt3"
            android:backgroundTint="@color/steelblue"/>

</LinearLayout>