<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/skyblue">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disease_ranking"
        android:textColor="#4682B4"
        android:textStyle="bold"
        android:textSize="50sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginLeft="110dp"
        android:layout_marginBottom="30dp"
        android:text="@string/source"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="255dp"
        android:orientation="horizontal">

        <ListView
            android:id="@+id/list_item"
            android:layout_width="250dp"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_move1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0.5dp"
                android:text="@string/more"
                android:backgroundTint="@color/steelblue" />

            <Button
                android:id="@+id/btn_move2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0.5dp"
                android:text="@string/more"
                android:backgroundTint="@color/steelblue" />

            <Button
                android:id="@+id/btn_move3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0.5dp"
                android:text="@string/more"
                android:backgroundTint="@color/steelblue" />

            <Button
                android:id="@+id/btn_move4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0.5dp"
                android:text="@string/more"
                android:backgroundTint="@color/steelblue" />

            <Button
                android:id="@+id/btn_move5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0.5dp"
                android:text="@string/more"
                android:backgroundTint="@color/steelblue" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="110dp"
        android:layout_marginRight="110dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"
        android:text="@string/learn_more"
        android:textColor="#4682B4"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/disease"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/disease"
            android:drawableLeft="@drawable/disease"
            android:gravity="center_vertical"
            android:layout_marginEnd="110dp"
            android:layout_marginRight="110dp"
            android:text="@string/disease_control"
            android:textColor="#4682B4"
            android:drawablePadding="20dp"/>

    </LinearLayout>

</LinearLayout>